# bdfconv2

./: .clang-format  .gitignore  CMakeLists.txt  alpha.txt  conv.sh  main.cpp  readme.md  uselist.txt
